# yabe

./: Cargo.toml  README.md  sort-config.yaml
.github/workflows/: ci.yaml
examples/full/: README.md
examples/full/in/: a.yaml
examples/read-base/: README.md
examples/read-base/in/: b.yaml  c.yaml  read-base.yaml
examples/simple/: README.md
examples/sort/: README.md
examples/sort/in/: values.yaml
src/: deep_equal.rs  diff.rs  lib.rs  main.rs  merge.rs  sorter.rs
tests/: config.yaml  test_common.rs  test_deep_equal.rs  test_diff.rs  test_sorter.rs
