[package]
name = "yabe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yabe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
yaml-rust2 = "0.8.1"
